--- a/Home/pages/projetos/projetos.html
+++ b/Home/pages/projetos/projetos.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RM - Portfólio - Projetos</title>
-    <meta name="description" content="Projetos criados por Rafael Martiniano.">
+    <title>Projetos | Portfólio de Rafael Martiniano</title>
+    <meta name="description" content="Explore os projetos desenvolvidos por Rafael Martiniano, organizados por categorias.">
     <link rel="stylesheet" href="../../styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,22 +30,45 @@
         <div class="terminal-body">
           <p class="terminal-line">C:\> Explore os projetos realizados:</p>
           <br>
-          <p class="terminal-line">C:\> Projetos em Destaque:</p>
+
+          <!-- Projetos da Alura -->
+          <h3 class="terminal-title">Projetos da Alura</h3>
+          <ul>
+            <li>
+              <strong>Challenge Amigo Secreto:</strong> Sistema de sorteio dinâmico para Amigo Secreto.<br>
+              <a href="https://rmartinione.github.io/Challenge-AluraOne/challenge-amigo-secreto/index.html" target="_blank">Ver Projeto</a>
+            </li>
+            <li>
+              <strong>7 Days of Code - JavaScript:</strong> Desafios diários para praticar lógica e manipulação de DOM.<br>
+              <a href="https://github.com/rmartinione/7daysofcodeJS" target="_blank">Ver Repositório</a>
+            </li>
+          </ul>
           <br>
-          <p class="terminal-line">C:\> Desenvolvido no curso ONE + Alura:</p>
-          <p class="terminal-line">C:\> <a href="https://rmartinione.github.io/Challenge-AluraOne/challenge-amigo-secreto/index.html" target="_blank">Challenge Amigo Secreto (Projeto One + Alura)</a></p>
-          <p class="terminal-line">C:\> <a href="https://github.com/rmartinione/Alura-One-Backend-Java" target="_blank">Primeiro Java | OOP - Backend - Conta bancária (Projeto One + Alura)</a></p>
+
+          <!-- Projetos em Java -->
+          <h3 class="terminal-title">Projetos em Java</h3>
+          <ul>
+            <li>
+              <strong>Conta Bancária:</strong> Simulação de operações bancárias básicas.<br>
+              <a href="https://github.com/rmartinione/Alura-One-Backend-Java" target="_blank">Ver Repositório</a>
+            </li>
+            <li>
+              <strong>Consulta CEP:</strong> Sistema para consultar endereços via API e salvar em JSON.<br>
+              <a href="https://github.com/rmartinione/ConsultaCEP" target="_blank">Ver Repositório</a>
+            </li>
+          </ul>
           <br>
-           <!-- Adicionando a seção de Projetos Autonomos -->
-          <p class="terminal-line">C:\> Primeiro projeto desenvolvido de forma autonoma:</p>
-          <p class="terminal-line">C:\> <a href="https://rmartinione.github.io/qrcode/" target="_blank">Gerador de QRCode (Comunidade Alura)</a></p>
+
+          <!-- Projetos em JavaScript -->
+          <h3 class="terminal-title">Projetos em JavaScript</h3>
+          <ul>
+            <li>
+              <strong>Gerador de QRCode:</strong> Ferramenta para criar QR Codes personalizados.<br>
+              <a href="https://rmartinione.github.io/qrcode/" target="_blank">Ver Projeto</a>
+            </li>
+          </ul>
           <br>
-          <!-- Adicionando a seção de Projetos em Breve -->
-          <p class="terminal-line">C:\> Projetos em Breve:</p>
-          <p class="terminal-line">C:\> Gerador de Documentos <span class="in-construction">[Em Construção]</span></p>
-          <p class="terminal-line">C:\> Organizador de Texto <span class="in-construction">[Em Construção]</span></p>
-          <p class="terminal-line">C:\> Validador de Links <span class="in-construction">[Em Construção]</span></p>
-          <br>
+
           <div class="terminal-links">
             <a href="../../../index.html" class="btn-terminal">Página inicial</a>
             <a href="../skills/skills.html" class="btn-terminal">Habilidades</a>
@@ -56,6 +79,33 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+  <div class="footer__content">
+    <p class="footer__text">© 2025 Rafael Martiniano. Todos os direitos reservados.</p>
+    <p class="footer__text">
+      Este trabalho está licenciado sob a licença 
+      <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" class="footer__link">CC BY-NC 4.0</a>.
+    </p>
+    <div class="footer__socials">
+      <a href="https://github.com/rmartinione" target="_blank" class="footer__social-link">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <path fill="#fff" d="M41,24c0,9.4-7.6,17-17,17S7,33.4,7,24S14.6,7,24,7S41,14.6,41,24z"></path>
+                <path fill="#455a64" d="M21,41v-5.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5V41h2v-6.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5	V41h2v-5.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5V41h1.8c0.2-0.3,0.2-0.6,0.2-1.1V36c0-2.2-1.9-5.2-4.3-5.2h-2.5	c-2.3,0-4.3,3.1-4.3,5.2v3.9c0,0.4,0.1,0.8,0.2,1.1H21L21,41z M40.1,26.4L40.1,26.4c0,0-1.3-0.4-2.4-0.4h-0.1	c-1.1,0-2.9,0.3-2.9,0.3c-0.1,0-0.1,0-0.1-0.1s0-0.1,0.1-0.1s2-0.3,3.1-0.3s2.4,0.4,2.5,0.4s0.1,0.1,0.1,0.2	C40.2,26.3,40.2,26.4,40.1,26.4z M39.8,27.2L39.8,27.2c0,0-1.4-0.4-2.6-0.4c-0.9,0-3,0.2-3.1,0.2S34,27,34,26.9s0-0.1,0.1-0.1	s2.2-0.2,3.1-0.2c1.3,0,2.6,0.4,2.6,0.4c0.1,0,0.1,0.1,0.1,0.2C39.9,27.1,39.9,27.2,39.8,27.2z M7.8,26.4c-0.1,0-0.1,0-0.1-0.1	s0-0.1,0.1-0.2c0.8-0.2,2.4-0.5,3.3-0.5c0.8,0,3.5,0.2,3.6,0.2s0.1,0.1,0.1,0.1c0,0.1-0.1,0.1-0.1,0.1s-2.7-0.2-3.5-0.2	C10.1,26,8.6,26.2,7.8,26.4L7.8,26.4z M8.2,27.9c0,0-0.1,0-0.1-0.1s0-0.1,0-0.2c0.1,0,1.4-0.8,2.9-1c1.3-0.2,4,0.1,4.2,0.1	c0.1,0,0.1,0.1,0.1,0.1c0,0.1-0.1,0.1-0.1,0.1l0,0c0,0-2.8-0.3-4.1-0.1C9.6,27.1,8.2,27.9,8.2,27.9L8.2,27.9z"></path>
+                <path fill="#455a64" d="M14.2,23.5c0-4.4,4.6-8.5,10.3-8.5s10.3,4,10.3,8.5S31.5,31,24.5,31S14.2,27.9,14.2,23.5z"></path><path fill="#455a64" d="M28.6,16.3c0,0,1.7-2.3,4.8-2.3c1.2,1.2,0.4,4.8,0,5.8L28.6,16.3z M20.4,16.3c0,0-1.7-2.3-4.8-2.3	c-1.2,1.2-0.4,4.8,0,5.8L20.4,16.3z M20.1,35.9c0,0-2.3,0-2.8,0c-1.2,0-2.3-0.5-2.8-1.5c-0.6-1.1-1.1-2.3-2.6-3.3	c-0.3-0.2-0.1-0.4,0.4-0.4c0.5,0.1,1.4,0.2,2.1,1.1c0.7,0.9,1.5,2,2.8,2s2.7,0,3.5-0.9L20.1,35.9z"></path>
+                <path fill="#00bcd4" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z M24,40c-8.8,0-16-7.2-16-16S15.2,8,24,8	s16,7.2,16,16S32.8,40,24,40z"></path>
+            </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/rafael-martiniano/" target="_blank" class="footer__social-link">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <path fill="#0288d1" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z"></path>
+                <rect width="4" height="15" x="14" y="19" fill="#fff"></rect>
+                <path fill="#fff" d="M16,17L16,17c-1.2,0-2-0.9-2-2c0-1.1,0.8-2,2-2c1.2,0,2,0.9,2,2C18,16.1,17.2,17,16,17z"></path>
+                <path fill="#fff" d="M35,24.5c0-3-2.5-5.5-5.5-5.5c-1.9,0-3.5,0.9-4.5,2.3V19h-4v15h4v-8c0-1.7,1.3-3,3-3s3,1.3,3,3v8h4	C35,34,35,24.9,35,24.5z"></path>
+            </svg>
+      </a>
+    </div>
+  </div>
+  </footer>
   <script src="../../scripts/script.js"></script>
 </body>
 </html>
