--- a/Home/pages/sobre/sobre.html
+++ b/Home/pages/sobre/sobre.html
@@ -1,52 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre | Portfólio de Rafael Martiniano</title>
-    <meta name="description" content="Saiba mais sobre Rafael Martiniano, suas habilidades e experiências.">
-    <link rel="stylesheet" href="../../styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sobre | Portfólio de Rafael Martiniano</title>
+  <meta name="description" content="Saiba mais sobre Rafael Martiniano, suas habilidades e experiências.">
+  <link rel="stylesheet" href="../../styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body class="terminal-theme">
-    <div class="background-gradient"></div>
-    <div class="computer">
-        <div class="computer-screen">
-            <!-- Botão de Desligar -->
-          <button class="close-button" aria-label="Desligar">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 2v10"></path>
-            <path d="M5.5 4.2A10 10 0 1 0 18.5 4.2"></path>
-            </svg>
-          </button>
-        <div class="terminal">
+  <div class="background-gradient"></div>
+  <div class="computer">
+    <div class="computer-screen">
+      <!-- Botão de Desligar -->
+      <button class="close-button" aria-label="Desligar">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M12 2v10"></path>
+          <path d="M5.5 4.2A10 10 0 1 0 18.5 4.2"></path>
+        </svg>
+      </button>
+      <div class="terminal">
         <div class="terminal-header">
-            <span class="terminal-title">Sobre Mim</span>
+          <span class="terminal-title">Sobre Mim</span>
         </div>
         <div class="terminal-body">
-            <p class="terminal-line">C:\> Olá, sou Rafael Martiniano</p>
-            <p class="terminal-line">C:\> Estudante do programa ONE - Oracle Next Education.</p>
-            <p class="terminal-line">C:\> Apaixonado por tecnologia e desenvolvimento front-end.</p>
-            <p class="terminal-line">C:\> Atualmente, estou focado em HTML, CSS, JavaScript e busco sempre aprimorar minhas habilidades em design responsivo e experiência do usuário.</p>
-            <p class="terminal-line">C:\> Tenho grande interesse também nas tecnologias das gigantes, como Oracle, Microsoft, Cisco, Fortigate, entre outras, especialmente na área de Inteligência Artificial (IA).</p>
-            <p class="terminal-line">C:\> Estou animado com minha jornada na programação web e busco sempre aplicar meus conhecimentos em projetos reais e desafios práticos. Meu objetivo é criar soluções inovadoras, seguras e contribuir para a comunidade de desenvolvedores.</p>
-        <div class="terminal-links">
+          <p class="terminal-line">C:\> Olá, sou Rafael Martiniano</p>
+          <p class="terminal-line">C:\> Estudante do programa ONE - Oracle Next Education.</p>
+          <p class="terminal-line">C:\> Apaixonado por tecnologia e desenvolvimento front-end.</p>
+          <p class="terminal-line">C:\> Atualmente, estou focado em HTML, CSS, JavaScript e busco sempre aprimorar minhas habilidades em design responsivo e experiência do usuário.</p>
+          <p class="terminal-line">C:\> Tenho grande interesse também nas tecnologias das gigantes, como Oracle, Microsoft, Cisco, Fortigate, entre outras, especialmente na área de Inteligência Artificial (IA).</p>
+          <p class="terminal-line">C:\> Meu objetivo é criar soluções inovadoras, seguras e contribuir para a comunidade de desenvolvedores.</p>
+          <div class="terminal-links">
             <a href="../../../index.html" class="btn-terminal">Página inicial</a>
             <a href="../skills/skills.html" class="btn-terminal">Habilidades</a>
             <a href="../projetos/projetos.html" class="btn-terminal">Projetos</a>
             <a href="../contact/contact.html" class="btn-terminal">Contato</a>
+          </div>
         </div>
-        </div>
-    </div>
+      </div>
     </div>
     <div class="computer-base"></div>
     <div class="computer-keyboard"></div>
     <div class="computer-mouse"></div>
+  </div>
+  <footer class="footer">
+  <div class="footer__content">
+    <p class="footer__text">© 2025 Rafael Martiniano. Todos os direitos reservados.</p>
+    <p class="footer__text">
+      Este trabalho está licenciado sob a licença 
+      <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" class="footer__link">CC BY-NC 4.0</a>.
+    </p>
+    <div class="footer__socials">
+      <a href="https://github.com/rmartinione" target="_blank" class="footer__social-link">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <path fill="#fff" d="M41,24c0,9.4-7.6,17-17,17S7,33.4,7,24S14.6,7,24,7S41,14.6,41,24z"></path>
+                <path fill="#455a64" d="M21,41v-5.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5V41h2v-6.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5	V41h2v-5.5c0-0.3,0.2-0.5,0.5-0.5s0.5,0.2,0.5,0.5V41h1.8c0.2-0.3,0.2-0.6,0.2-1.1V36c0-2.2-1.9-5.2-4.3-5.2h-2.5	c-2.3,0-4.3,3.1-4.3,5.2v3.9c0,0.4,0.1,0.8,0.2,1.1H21L21,41z M40.1,26.4L40.1,26.4c0,0-1.3-0.4-2.4-0.4h-0.1	c-1.1,0-2.9,0.3-2.9,0.3c-0.1,0-0.1,0-0.1-0.1s0-0.1,0.1-0.1s2-0.3,3.1-0.3s2.4,0.4,2.5,0.4s0.1,0.1,0.1,0.2	C40.2,26.3,40.2,26.4,40.1,26.4z M39.8,27.2L39.8,27.2c0,0-1.4-0.4-2.6-0.4c-0.9,0-3,0.2-3.1,0.2S34,27,34,26.9s0-0.1,0.1-0.1	s2.2-0.2,3.1-0.2c1.3,0,2.6,0.4,2.6,0.4c0.1,0,0.1,0.1,0.1,0.2C39.9,27.1,39.9,27.2,39.8,27.2z M7.8,26.4c-0.1,0-0.1,0-0.1-0.1	s0-0.1,0.1-0.2c0.8-0.2,2.4-0.5,3.3-0.5c0.8,0,3.5,0.2,3.6,0.2s0.1,0.1,0.1,0.1c0,0.1-0.1,0.1-0.1,0.1s-2.7-0.2-3.5-0.2	C10.1,26,8.6,26.2,7.8,26.4L7.8,26.4z M8.2,27.9c0,0-0.1,0-0.1-0.1s0-0.1,0-0.2c0.1,0,1.4-0.8,2.9-1c1.3-0.2,4,0.1,4.2,0.1	c0.1,0,0.1,0.1,0.1,0.1c0,0.1-0.1,0.1-0.1,0.1l0,0c0,0-2.8-0.3-4.1-0.1C9.6,27.1,8.2,27.9,8.2,27.9L8.2,27.9z"></path>
+                <path fill="#455a64" d="M14.2,23.5c0-4.4,4.6-8.5,10.3-8.5s10.3,4,10.3,8.5S31.5,31,24.5,31S14.2,27.9,14.2,23.5z"></path><path fill="#455a64" d="M28.6,16.3c0,0,1.7-2.3,4.8-2.3c1.2,1.2,0.4,4.8,0,5.8L28.6,16.3z M20.4,16.3c0,0-1.7-2.3-4.8-2.3	c-1.2,1.2-0.4,4.8,0,5.8L20.4,16.3z M20.1,35.9c0,0-2.3,0-2.8,0c-1.2,0-2.3-0.5-2.8-1.5c-0.6-1.1-1.1-2.3-2.6-3.3	c-0.3-0.2-0.1-0.4,0.4-0.4c0.5,0.1,1.4,0.2,2.1,1.1c0.7,0.9,1.5,2,2.8,2s2.7,0,3.5-0.9L20.1,35.9z"></path>
+                <path fill="#00bcd4" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z M24,40c-8.8,0-16-7.2-16-16S15.2,8,24,8	s16,7.2,16,16S32.8,40,24,40z"></path>
+            </svg>
+      </a>
+      <a href="https://www.linkedin.com/in/rafael-martiniano/" target="_blank" class="footer__social-link">
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 48 48">
+                <path fill="#0288d1" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z"></path>
+                <rect width="4" height="15" x="14" y="19" fill="#fff"></rect>
+                <path fill="#fff" d="M16,17L16,17c-1.2,0-2-0.9-2-2c0-1.1,0.8-2,2-2c1.2,0,2,0.9,2,2C18,16.1,17.2,17,16,17z"></path>
+                <path fill="#fff" d="M35,24.5c0-3-2.5-5.5-5.5-5.5c-1.9,0-3.5,0.9-4.5,2.3V19h-4v15h4v-8c0-1.7,1.3-3,3-3s3,1.3,3,3v8h4	C35,34,35,24.9,35,24.5z"></path>
+            </svg>
+      </a>
     </div>
-    <script src="../../scripts/script.js"></script>
+  </div>
+  </footer>
+  <script src="../../scripts/script.js"></script>
 </body>
 </html>
