Alterado texto em sobre.html e realizado ajuste de tabulações {Padrão TAB - 4}

--- a/Home/pages/sobre/sobre.html
+++ b/Home/pages/sobre/sobre.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 </head>
-<body class="terminal-theme">
+  <body class="terminal-theme">
   <div class="background-gradient"></div>
   <div class="computer">
     <div class="computer-screen">
@@ -28,9 +28,10 @@
         </div>
         <div class="terminal-body">
           <p class="terminal-line">C:\> Olá, sou Rafael Martiniano</p>
-          <p class="terminal-line">C:\> Estudante do programa ONE - Oracle Next Education.</p>
-          <p class="terminal-line">C:\> Apaixonado por tecnologia e desenvolvimento front-end.</p>
+          <p class="terminal-line">C:\> Estudante em Gestão de TI e desenvolvimento.</p>
+          <p class="terminal-line">C:\> Entusiasta por tecnologia e desenvolvimento de back-end e front-end.</p>
           <p class="terminal-line">C:\> Atualmente, estou focado em HTML, CSS, JavaScript e busco sempre aprimorar minhas habilidades em design responsivo e experiência do usuário.</p>
+          <p class="terminal-line">C:\> Atualmente, estou atuando com Java, aplicando conceitos de POO e controle de versão com GIT e  repositório Github.</p>
           <p class="terminal-line">C:\> Tenho grande interesse também nas tecnologias das gigantes, como Oracle, Microsoft, Cisco, Fortigate, entre outras, especialmente na área de Inteligência Artificial (IA).</p>
           <p class="terminal-line">C:\> Meu objetivo é criar soluções inovadoras, seguras e contribuir para a comunidade de desenvolvedores.</p>
           <div class="terminal-links">
