Correção de layout Challenge 7daysofcode

--- a/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/FifthDayChallenge/quinto.html
+++ b/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/FifthDayChallenge/quinto.html
@@ -13,10 +13,10 @@
     </header>
     <main class="principal">
         <section class="conteudo">
-            <h1>Quinto Desafio: Palpite de Palavra</h1>
-            <p class="mensagem">Instruções: Clique no botão "Iniciar" para começar o desafio. Você precisa adivinhar uma palavra secreta.</p>
+            <h1>Quinto Desafio: Lista de Compras</h1>
+            <p class="mensagem">Instruções: Clique no botão "Iniciar" para começar a montar sua lista de compras. Você poderá adicionar itens em diferentes categorias.</p>
             <button id="botao-iniciar" class="botao botao-iniciar">Iniciar</button>
-            <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Jogar Novamente</button>
+            <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Criar Nova Lista</button>
             <br>
             <button onclick="window.location.href='../../index.html'" class="botao botao-voltar">Voltar</button>
         </section>
