--- a/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/FirstDayChallenge/primeiro.html
+++ b/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/FirstDayChallenge/primeiro.html
@@ -13,8 +13,8 @@
     </header>
     <main class="principal">
         <section class="conteudo">
-            <h1>Primeiro Desafio</h1>
-            <p class="mensagem">Instruções: Clique no botão "Iniciar" para começar o desafio. Abra o console do navegador (pressione F12 no computador) para ver os resultados dos <code>console.log</code>.</p>
+            <h1>Primeiro Desafio: Comparação de Variáveis</h1>
+            <p class="mensagem">Instruções: Clique no botão "Iniciar". <strong>Abra o console do navegador (pressione F12 e vá para a aba "Console")</strong> para ver os resultados das comparações entre as variáveis.</p>
             <button id="botao-iniciar" class="botao botao-iniciar">Iniciar</button>
             <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Jogar Novamente</button>
             <br>
