--- a/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SecondDayChallenge/segundo.html
+++ b/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SecondDayChallenge/segundo.html
@@ -13,8 +13,8 @@
     </header>
     <main class="principal">
         <section class="conteudo">
-            <h1>Second Challenge</h1>
-            <p class="mensagem">Instruções: Clique no botão "Iniciar" para começar o desafio. Siga as instruções fornecidas.</p>
+            <h1>Segundo Desafio: Análise de Variáveis</h1>
+            <p class="mensagem">Instruções: Clique no botão "Iniciar". Este desafio também utiliza o <strong>console do navegador (pressione F12 e vá para a aba "Console")</strong> para exibir informações importantes.</p>
             <button id="botao-iniciar" class="botao botao-iniciar">Iniciar</button>
             <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Jogar Novamente</button>
             <br>
