--- a/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SeventhDayChallenge/setimo.html
+++ b/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SeventhDayChallenge/setimo.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7 Days of Code - Sétimo Desafio</title>
     <link rel="stylesheet" href="../../style/styles.css"> 
-    <!-- Corrigido o caminho do arquivo JS para garantir que seja carregado corretamente -->
     <script src="configsetimo.js" defer></script>
 </head>
 <body class="desafio">
@@ -14,12 +13,10 @@
     </header>
     <main class="principal">
         <div class="conteudo">
-            <!-- Descrição do desafio -->
-            <section class="texto">
-                <h1>Sétimo Desafio</h1>
-                <p class="mensagem">Bem-vindo ao Sétimo Desafio! Neste desafio, você deverá realizar operações matemáticas. Clique em iniciar.</p>
+            <section class="texto"> <h1>Sétimo Desafio: Calculadora</h1>
+                <p class="mensagem">Bem-vindo ao Sétimo Desafio! Realize operações matemáticas básicas. Clique em iniciar.</p>
                 <button id="botao-iniciar" class="botao botao-iniciar">Iniciar</button>
-                <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Jogar Novamente</button>
+                <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Calcular Novamente</button>
             </section>
             <br>
             <button onclick="window.location.href='../../index.html'" class="botao botao-voltar">Voltar</button>
