--- a/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SixthDayChallenge/sexto.html
+++ b/Desenvolvimento/Cursos/Alura/Javascript/Exercicios/7daysofcodeJS/javascript/SixthDayChallenge/sexto.html
@@ -13,10 +13,10 @@
     </header>
     <main class="principal">
         <section class="conteudo">
-            <h1>Sexto Desafio: Adivinhação de Número</h1>
-            <p class="mensagem">Instruções: Clique no botão "Iniciar" para começar o desafio. Você precisa adivinhar um número aleatório entre 1 e 100.</p>
+            <h1>Sexto Desafio: Lista de Compras Avançada</h1>
+            <p class="mensagem">Instruções: Clique "Iniciar" para gerenciar sua lista de compras. Você poderá adicionar e remover itens.</p>
             <button id="botao-iniciar" class="botao botao-iniciar">Iniciar</button>
-            <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Jogar Novamente</button>
+            <button id="botao-reiniciar" class="botao botao-jogar-novamente" style="display: none;">Gerenciar Nova Lista</button>
             <br>
             <button onclick="window.location.href='../../index.html'" class="botao botao-voltar">Voltar</button>
         </section>
