--- a/Home/pages/projetos/projetos.html
+++ b/Home/pages/projetos/projetos.html
@@ -53,14 +53,16 @@
               <a href="https://github.com/rmartinione/Alura-One-Backend-Java" target="_blank">Ver Repositório</a>
             </li>
             <li>
-              <strong>Consulta CEP:</strong> Sistema para consultar endereços via API e salvar em JSON.<br>
-              <a href="https://github.com/rmartinione/ConsultaCEP" target="_blank">Ver Repositório</a>
+              <strong>Challenge Back End ONE:</strong> Backend - Conversor de Moedas - Utilizando API e conceitos de POO<br>
+              <a href="https://github.com/rafaelmartiniano/challenge-conversor-moedas/tree/challengeJava/src/main/java/com/rm/conversorconsole" target="_blank">Ver Repositório</a>
+              <strong>Frontend - Conversor de Moedas - Utilizando API e conceitos de POO: </strong>Complemento (Desenvolvimento Proprio) para o Challenge Back End ONE.<br>
+              <a href="https://challenge-conversor-moedas.vercel.app" target="_blank">Ver Site </a>           
             </li>
           </ul>
           <br>
 
           <!-- Projetos em JavaScript -->
-          <h3 class="terminal-title">Projetos em JavaScript</h3>
+          <h3 class="terminal-title">Outros Projetos</h3>
           <ul>
             <li>
               <strong>Gerador de QRCode:</strong> Ferramenta para criar QR Codes personalizados.<br>
