--- a/Home/pages/projetos/projetos.html
+++ b/Home/pages/projetos/projetos.html
@@ -37,7 +37,11 @@
           <ul>
             <li>
               <strong>Challenge Amigo Secreto:</strong> Sistema de sorteio dinâmico para Amigo Secreto.<br>
-              <a href="https://rmartinione.github.io/Challenge-AluraOne/challenge-amigo-secreto/index.html" target="_blank">Ver Projeto</a>
+              <a href="https://vercel.com/rmportifolio/challenge-amigo-secreto" target="_blank">Ver Site</a>
+            </li>
+            <li>
+              <strong>Challenge Amigo Secreto:</strong> Sistema de sorteio dinâmico para Amigo Secreto.<br>
+              <a href="https://github.com/rafaelmartiniano/challenge-amigo-secreto" target="_blank">Ver Repositorio</a>
             </li>
             <li>
               <strong>7 Days of Code - JavaScript:</strong> Desafios diários para praticar lógica e manipulação de DOM.<br>
@@ -54,11 +58,12 @@
               <a href="https://github.com/rmartinione/Alura-One-Backend-Java" target="_blank">Ver Repositório</a>
             </li>
             <li>
-              <strong>Challenge Back End ONE:</strong> Backend - Conversor de Moedas - Utilizando API e conceitos de POO<br>
+              <strong>Challenge Back End ONE:</strong>Ver repositorio<br>
               <a href="https://github.com/rafaelmartiniano/challenge-conversor-moedas/tree/challengeJava/src/main/java/com/rm/conversorconsole" target="_blank">Ver Repositório</a>
             </li>
             <li>
-              <strong>Frontend - Conversor de Moedas - Utilizando API e conceitos de POO: </strong>Complemento (Desenvolvimento Proprio) para o Challenge Back End ONE.<br>
+              <strong>Challenge Back End ONE - Frontend:</strong><br>
+              <strong>A partir desse challenge, fiz esse mini-site, apenas para ilustrar o frontend </strong>Ver site<br>
               <a href="https://challenge-conversor-moedas.vercel.app" target="_blank">Ver Site </a>           
             </li>
           </ul>
