--- a/Home/pages/projetos/projetos.html
+++ b/Home/pages/projetos/projetos.html
@@ -33,7 +33,7 @@
           <br>
 
           <!-- Projetos da Alura -->
-          <h3 class="terminal-title">Projetos da Alura</h3>
+          <h3 class="terminal-title"></u>Projetos da Curso ONE + Alura</u></h3>
           <ul>
             <li>
               <strong>Challenge Amigo Secreto:</strong> Sistema de sorteio dinâmico para Amigo Secreto.<br>
@@ -51,18 +51,18 @@
           <br>
 
           <!-- Projetos em Java -->
-          <h3 class="terminal-title">Projetos em Java</h3>
+          <h3 class="terminal-title"><u>Projetos em Java</u></h3>
           <ul>
             <li>
               <strong>Conta Bancária:</strong> Simulação de operações bancárias básicas.<br>
               <a href="https://github.com/rmartinione/Alura-One-Backend-Java" target="_blank">Ver Repositório</a>
             </li>
             <li>
-              <strong>Challenge Back End ONE:</strong>Ver repositorio<br>
+              <strong>Challenge Back End ONE:</strong> Ver repositorio<br>
               <a href="https://github.com/rafaelmartiniano/challenge-conversor-moedas/tree/challengeJava/src/main/java/com/rm/conversorconsole" target="_blank">Ver Repositório</a>
             </li>
             <li>
-              <strong>Challenge Back End ONE - Frontend:</strong><br>
+              <strong>Challenge Back End ONE - Frontend:</strong> <br>
               <strong>A partir desse challenge, fiz esse mini-site, apenas para ilustrar o frontend </strong>Ver site<br>
               <a href="https://challenge-conversor-moedas.vercel.app" target="_blank">Ver Site </a>           
             </li>
@@ -70,11 +70,11 @@
           <br>
 
           <!-- Projetos em JavaScript -->
-          <h3 class="terminal-title">Outros Projetos</h3>
+          <h3 class="terminal-title"><u>Outros Projetos</u></h3>
           <ul>
             <li>
               <strong>Gerador de QRCode:</strong> Ferramenta para criar QR Codes personalizados.<br>
-              <a href="https://rmartinione.github.io/qrcode/" target="_blank">Ver Projeto</a>
+              <b>Em Breve</b><br>
             </li>
           </ul>
           <br>
