--- a/Home/pages/projetos/projetos.html
+++ b/Home/pages/projetos/projetos.html
@@ -29,11 +29,10 @@
           <span class="terminal-title">Projetos</span>
       </div>
         <div class="terminal-body">
-          <p class="terminal-line">C:\> Explore os projetos realizados:</p>
-          <br>
-
+          <p class="terminal-line">C:\> Explore os projetos realizados:</p><br>  
           <!-- Projetos da Alura -->
-          <h3 class="terminal-title"></u>Projetos da Curso ONE + Alura</u></h3>
+          <h3 class="terminal-title"><u>Projetos da Curso ONE + Alura - Frontend com JavaScript</u></h3><br>
+          
           <ul>
             <li>
               <strong>Challenge Amigo Secreto:</strong> Sistema de sorteio dinâmico para Amigo Secreto.<br>
@@ -51,7 +50,7 @@
           <br>
 
           <!-- Projetos em Java -->
-          <h3 class="terminal-title"><u>Projetos em Java</u></h3>
+          <h3 class="terminal-title"><u>Projetos da Curso ONE + Alura - Backend com Java</u></h3>
           <ul>
             <li>
               <strong>Conta Bancária:</strong> Simulação de operações bancárias básicas.<br>
@@ -70,7 +69,7 @@
           <br>
 
           <!-- Projetos em JavaScript -->
-          <h3 class="terminal-title"><u>Outros Projetos</u></h3>
+          <h3 class="terminal-title"><u>Outros Projetos (Em Construção)</u></h3>
           <ul>
             <li>
               <strong>Gerador de QRCode:</strong> Ferramenta para criar QR Codes personalizados.<br>
